5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1876_1598.log
== TEST (2019-07-03 18:02:26) 
-- CODE:
from numpy import *

v = eval(int(input()))

print
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:02:39) 
-- CODE:
from numpy import *

v = eval(int(input()))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:03:00) 
-- CODE:
from numpy import *

v = eval((input())

print(v)
-- ERROR:
File "XXXX", line 5
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:03:13) 
-- CODE:
from numpy import *

v = eval((input())
print(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:03:22) 
-- CODE:
from numpy import *

v = eval(input())
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:03:40) 
-- CODE:
from numpy import *

v = eval(int((input()))
print(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:03:46) 
-- CODE:
from numpy import *

v = eval(int((input())
print(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:04:01) 
-- CODE:
from numpy import *

v = eval(int((input()))
print(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:04:04) 
-- CODE:
from numpy import *

v = eval(int((input())
print(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:04:07) 
-- CODE:
from numpy import *

v = eval(int((input())
print(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:04:19) 
-- CODE:
from numpy import *

v = eval(int(input())
print(v)
-- ERROR:
File "XXXX", line 4
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:04:22) 
-- CODE:
from numpy import *

v = eval(int(input()))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:04:31) 
-- CODE:
from numpy import *

v = eval(int(input()))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:05:07) 
-- CODE:
from numpy import *

v = eval((input(int()))

print(v)
-- ERROR:
File "XXXX", line 5
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:06:42) 
-- CODE:
from numpy import *

v = eval(int(input()))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:07:09) 
-- CODE:
from numpy import *

v = array(eval(int(input())))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:07:39) 
-- CODE:
from numpy import *

v = eval(int(input()))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:07:46) 
-- CODE:
from numpy import *

v = eval(int(input()))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:08:04) 
-- CODE:
from numpy import *

v = eval(input())

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:10:54) 
-- CODE:
from numpy import *

v = eval(input())
print(v)
i = 1
tam = v.shape()
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- EXECUTION TIME:
1.06769
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1876/1598/main.py", line 6, in <module>
    tam = v.shape()
AttributeError: 'list' object has no attribute 'shape'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:11:00) 
-- CODE:
from numpy import *

v = eval(input())
print(v)
i = 1
tam = v.shape()
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:11:43) 
-- CODE:
from numpy import *


v = eval(input())
print(v)
i = 1
tam = shape(v)
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:12:05) 
-- CODE:
from numpy import *


v = eval(input())
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:12:29) 
-- CODE:
from numpy import *


v = eval(input())
print(v)
i = 1
tam = shape(v)[]
print(tam)
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
File "XXXX", line 7
    tam = shape(v)[]
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:12:38) 
-- CODE:
from numpy import *


v = eval(input())
print(v)
i = 1
tam = shape(v)[1]
print(tam)
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:12:54) 
-- CODE:
from numpy import *


v = eval(input())
print(v)
i = 1
tam = shape(v[])
print(tam)
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
File "XXXX", line 7
    tam = shape(v[])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:13:05) 
-- CODE:
from numpy import *


v = eval(input())
print(v)
i = 1

for i in range(v):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:13:59) 
-- CODE:
from numpy import *


v = eval(input())
print(v)
i = 1

for i in range(v):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:15:51) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1

for i in range(v):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:16:59) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:16) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:31) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:41) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:17:54) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:18:01) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- EXECUTION TIME:
0.832703
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[11.32 40.2  32.    0.  ]
(4,)
[11.32 40.2  32.    0.  ]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[32.  44.  32.1 43.2]
(4,)
[32.  44.  32.1 43.2]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
[23  2  1]
(3,)
[23  2  1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:18:03) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:29) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	v[i] = v[i] + v[i-1]	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:50) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= v[i] + v[i-1]	

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:55) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= v[i] + v[i-1]	

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:21:05) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= v[i] + v[i-1]	

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:21:13) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= v[i] + v[i-1]	

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:21:23) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= v[i] + v[i-1]	

print(total)
-- EXECUTION TIME:
1.16941
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[11.32 40.2  32.    0.  ]
(4,)
32.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[32.  44.  32.1 43.2]
(4,)
75.30000000000001
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
[23  2  1]
(3,)
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:21:37) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= v[i] + v[i-1]	

print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:22:23) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(v[i] + v[i-1])
print(v)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:22:44) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(v[i] + v[i-1])
print(v)
print(round(total,3))
-- EXECUTION TIME:
0.829337
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[11.32 40.2  32.    0.  ]
(4,)
[11.32 40.2  32.    0.  ]
32.0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[32.  44.  32.1 43.2]
(4,)
[32.  44.  32.1 43.2]
75.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
compras [23  2  1]
(3,)
[23  2  1]
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:22:48) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(v[i] + v[i-1])
print(v)
print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:23:30) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(v[i] + v[i-1])
print(v)
print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:23:59) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(v[i] + v[i-1])
print(v)
print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:27) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(v[i] + v[i+1])
print(v)
print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:26:19) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(som(vet))
print(v)
print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:26:28) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(soma(vet))
print(v)
print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:26:47) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(som(v))
print(v)
print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:27:23) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
total=0
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(total+v[i])
print(v)
print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:27:45) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))
print(v)
i = 1
total=0
tam = shape(v)
print(tam)
for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(total+v[i])
print(v)
print("total ",round(total,3))
-- EXECUTION TIME:
1.1905
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[11.32 40.2  32.    0.  ]
(4,)
[11.32 40.2  32.    0.  ]
total  83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[32.  44.  32.1 43.2]
(4,)
[32.  44.  32.1 43.2]
total  151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
[23  2  1]
(3,)
[23  2  1]
total  26.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:27:54) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))

i = 1
total=0
tam = shape(v)

for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(total+v[i])

print("total ",round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:27:59) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))

i = 1
total=0
tam = shape(v)

for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(total+v[i])

print("total ",round(total,3))
-- EXECUTION TIME:
1.22271
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
total  83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
total  151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
total  26.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:28:05) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))

i = 1
total=0
tam = shape(v)

for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(total+v[i])

print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:28:26) 
-- CODE:
from numpy import *


v =  array(eval(input("compras ")))

i = 1
total=0
tam = shape(v)

for i in range(tam[0]):
	if(v[i]>80):
		v[i] = v[i] - 5
	total= float(total+v[i])

print(round(total,3))
-- EXECUTION TIME:
1.25438
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
